--- a/Index.html
+++ b/Index.html
@@ -20,11 +20,7 @@
                     <li></li>
                     </ul>
                     <div class="lista_de_cursos">
-                    <img src="Img/curso1.jpg">
-                    <p>Html, Css3 y JavaScript para principiantes</p>
-                    <p>40$</p>
-                    <p>1</p>
-                    <p><span>X</span></p>
+                    
                 
                     </div>
                     <button id="vaciar_carrito">Vaciar Carrito</button>
@@ -44,9 +40,9 @@
                     <p> Sofra Yesica</p>
                     <div class="precio">
                         <p>$300</p>
-                        <p>$40</p>
+                        <p class="descuento">$40</p>
                     </div>
-                    <button class="agregar-carrito">Agregar al carrito</button>
+                    <button class="agregar-carrito" data-id="1">Agregar al carrito</button>
                 </div>
 
             </div>
@@ -57,9 +53,9 @@
                     <p> Sofra Yesica</p>
                     <div class="precio">
                         <p>$300</p>
-                        <p>$40</p>
                     </div>
-                    <button class="agregar-carrito">Agregar al carrito</button>
+                    <button class="agregar-carrito" data-id="2">Agregar al carrito</button>
+                    <p class="descuento">$40</p>
                 </div>
             </div>
             <div class="items">
@@ -69,9 +65,9 @@
                     <p> Sofra Yesica</p>
                     <div class="precio">
                         <p>$300</p>
-                        <p>$40</p>
+                        <p class="descuento">$40</p>
                     </div>
-                    <button class="agregar-carrito">Agregar al carrito</button>
+                    <button class="agregar-carrito" data-id="3">Agregar al carrito</button>
                 </div>
             </div>
             <div class="items">
@@ -81,9 +77,9 @@
                     <p> Sofra Yesica</p>
                     <div class="precio">
                         <p>$300</p>
-                        <p>$40</p>
+                        <p class="descuento">$40</p>
                     </div>
-                    <button class="agregar-carrito">Agregar al carrito</button>
+                    <button class="agregar-carrito" data-id="4">Agregar al carrito</button>
                 </div>
             </div>
             <div class="items">
@@ -93,9 +89,9 @@
                     <p>Sofra Yesica</p>
                     <div class="precio">
                         <p>$300</p>
-                        <p>$40</p>
+                        <p class="descuento">$40</p>
                     </div>
-                    <button class="agregar-carrito">Agregar al carrito</button>
+                    <button class="agregar-carrito" data-id="5">Agregar al carrito</button>
                 </div>
             </div>
             <div class="items">
@@ -105,9 +101,9 @@
                     <p>Sofra Yesica</p>
                     <div class="precio">
                         <p>$300</p>
-                        <p>$40</p>
+                        <p class="descuento">$40</p>
                     </div>
-                    <button class="agregar-carrito">Agregar al carrito</button>
+                    <button class="agregar-carrito" data-id="6">Agregar al carrito</button>
                 </div>
             </div>
         </div>
